--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "unflatten",
     "cats"
   ],
+  "dependencies": {
+    "@cdxoo/traverse": "^0.0.1"
+  },
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^9.2.2"
